# HyperPrismReimagined

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  TODO.md  build_and_notarize.sh  notarize_au_plugins.sh  notarize_plugins.sh
HyperPrismReimagined/: .gitattributes  Build and Install HyperPrism Plugins.command  CMakeLists.txt  Install HyperPrism Plugins.command  JUCE_DEVELOPMENT_WORKFLOW.md  PLUGIN_UX_UI_AUDIT.md  UI_LAYOUT_GUIDE.md  UI_STANDARDIZATION_GUIDE.md  UI_UPDATE_SUMMARY.md  copy_plugins_PRODUCTION.sh
HyperPrismReimagined/Distribution/: README_BETA_TESTERS.md
HyperPrismReimagined/Distribution/Release/: RELEASE_NOTES_v1.0.0.md
HyperPrismReimagined/Distribution/Release/HyperPrism_Reimagined_v1.0.0_Beta/: build_windows.bat
HyperPrismReimagined/Scripts/: build_mac.sh  build_mac_cmake.sh  collect_existing_builds.sh  create_release.sh
HyperPrismReimagined/Scripts/mac_installer/: build_installer.sh
HyperPrismReimagined/Scripts/mac_installer/resources/: license.html  readme.html  (+1 more)
HyperPrismReimagined/Source/AutoPan/: AutoPanEditor.cpp  AutoPanEditor.h  AutoPanPlugin.cpp  AutoPanProcessor.cpp  AutoPanProcessor.h  temp_parser_-365605751.cpp
HyperPrismReimagined/Source/BandPass/: BandPassEditor.cpp  BandPassEditor.h  BandPassPlugin.cpp  BandPassProcessor.cpp  BandPassProcessor.h
HyperPrismReimagined/Source/BandReject/: BandRejectEditor.cpp  BandRejectEditor.h  BandRejectPlugin.cpp  BandRejectProcessor.cpp  BandRejectProcessor.h
HyperPrismReimagined/Source/BassMaximiser/: BassMaximiserEditor.cpp  BassMaximiserEditor.h  BassMaximiserPlugin.cpp  BassMaximiserProcessor.cpp  BassMaximiserProcessor.h
HyperPrismReimagined/Source/Chorus/: ChorusEditor.cpp  ChorusEditor.h  ChorusPlugin.cpp  ChorusProcessor.cpp  ChorusProcessor.h
HyperPrismReimagined/Source/Compressor/: CompressorEditor.cpp  CompressorEditor.h  CompressorPlugin.cpp  CompressorProcessor.cpp  CompressorProcessor.h
HyperPrismReimagined/Source/Delay/: DelayEditor.cpp  DelayEditor.h  DelayPlugin.cpp  DelayProcessor.cpp  DelayProcessor.h
HyperPrismReimagined/Source/Echo/: EchoEditor.cpp  EchoEditor.h  EchoPlugin.cpp  EchoProcessor.cpp  EchoProcessor.h
HyperPrismReimagined/Source/Flanger/: FlangerEditor.cpp  FlangerEditor.h  FlangerPlugin.cpp  FlangerProcessor.cpp  FlangerProcessor.h
HyperPrismReimagined/Source/FrequencyShifter/: FrequencyShifterEditor.cpp  FrequencyShifterEditor.h  FrequencyShifterPlugin.cpp  FrequencyShifterProcessor.cpp  FrequencyShifterProcessor.h
HyperPrismReimagined/Source/HarmonicExciter/: HarmonicExciterEditor.cpp  HarmonicExciterEditor.h  HarmonicExciterPlugin.cpp  HarmonicExciterProcessor.cpp  HarmonicExciterProcessor.h
HyperPrismReimagined/Source/HighPass/: HighPassEditor.cpp  HighPassEditor.h  HighPassPlugin.cpp  HighPassProcessor.cpp  HighPassProcessor.h
HyperPrismReimagined/Source/HyperPhaser/: HyperPhaserEditor.cpp  HyperPhaserEditor.h  HyperPhaserPlugin.cpp  HyperPhaserProcessor.cpp  HyperPhaserProcessor.h
HyperPrismReimagined/Source/Limiter/: LimiterEditor.cpp  LimiterEditor.h  LimiterPlugin.cpp  LimiterProcessor.cpp  LimiterProcessor.h
HyperPrismReimagined/Source/LowPass/: LowPassEditor.cpp  LowPassEditor.h  LowPassPlugin.cpp  LowPassProcessor.cpp  LowPassProcessor.h
HyperPrismReimagined/Source/MSMatrix/: MSMatrixEditor.cpp  MSMatrixEditor.h  MSMatrixPlugin.cpp  MSMatrixProcessor.cpp  MSMatrixProcessor.h
HyperPrismReimagined/Source/MoreStereo/: MoreStereoEditor.cpp  MoreStereoEditor.h  MoreStereoPlugin.cpp  MoreStereoProcessor.cpp  MoreStereoProcessor.h
HyperPrismReimagined/Source/MultiDelay/: MultiDelayEditor.cpp  MultiDelayEditor.h  MultiDelayPlugin.cpp  MultiDelayProcessor.cpp  MultiDelayProcessor.h
HyperPrismReimagined/Source/NoiseGate/: NoiseGateEditor.cpp  NoiseGateEditor.h  NoiseGatePlugin.cpp  NoiseGateProcessor.cpp  NoiseGateProcessor.h
HyperPrismReimagined/Source/Pan/: PanEditor.cpp  PanEditor.h  PanPlugin.cpp  PanProcessor.cpp  PanProcessor.h
HyperPrismReimagined/Source/Phaser/: PhaserEditor.cpp  PhaserEditor.h  PhaserPlugin.cpp  PhaserProcessor.cpp  PhaserProcessor.h
HyperPrismReimagined/Source/PitchChanger/: PitchChangerEditor.cpp  PitchChangerEditor.h  PitchChangerPlugin.cpp  PitchChangerProcessor.cpp  PitchChangerProcessor.h
HyperPrismReimagined/Source/QuasiStereo/: QuasiStereoEditor.cpp  QuasiStereoEditor.h  QuasiStereoPlugin.cpp  QuasiStereoProcessor.cpp  QuasiStereoProcessor.h
HyperPrismReimagined/Source/Reverb/: ReverbEditor.cpp  ReverbEditor.h  ReverbPlugin.cpp  ReverbProcessor.cpp  ReverbProcessor.h
HyperPrismReimagined/Source/RingModulator/: RingModulatorEditor.cpp  RingModulatorEditor.h  RingModulatorPlugin.cpp  RingModulatorProcessor.cpp  RingModulatorProcessor.h
HyperPrismReimagined/Source/Shared/: HyperPrismLookAndFeel.cpp  HyperPrismLookAndFeel.h  StandardLayout.cpp  StandardLayout.h  XYPadComponent.cpp  XYPadComponent.h
HyperPrismReimagined/Source/SingleDelay/: SingleDelayEditor.cpp  SingleDelayEditor.h  SingleDelayPlugin.cpp  SingleDelayProcessor.cpp  SingleDelayProcessor.h
HyperPrismReimagined/Source/SonicDecimator/: SonicDecimatorEditor.cpp  SonicDecimatorEditor.h  SonicDecimatorPlugin.cpp  SonicDecimatorProcessor.cpp  SonicDecimatorProcessor.h
HyperPrismReimagined/Source/StereoDynamics/: StereoDynamicsEditor.cpp  StereoDynamicsEditor.h  StereoDynamicsPlugin.cpp  StereoDynamicsProcessor.cpp  StereoDynamicsProcessor.h
HyperPrismReimagined/Source/Tremolo/: TremoloEditor.cpp  TremoloEditor.h  TremoloPlugin.cpp  TremoloProcessor.cpp  TremoloProcessor.h
HyperPrismReimagined/Source/TubeTapeSaturation/: TubeTapeSaturationEditor.cpp  TubeTapeSaturationEditor.h  TubeTapeSaturationPlugin.cpp  TubeTapeSaturationProcessor.cpp  TubeTapeSaturationProcessor.h
HyperPrismReimagined/Source/Vibrato/: VibratoEditor.cpp  VibratoEditor.h  VibratoPlugin.cpp  VibratoProcessor.cpp  VibratoProcessor.h
HyperPrismReimagined/Source/Vocoder/: VocoderEditor.cpp  VocoderEditor.h  VocoderPlugin.cpp  VocoderProcessor.cpp  VocoderProcessor.h
HyperPrismReimagined/cmake/: Toolchain-mingw64.cmake
(+383 files in other folders)
